- Missed styles and scripts

--- a/docs/_stdyPosts/2017-01-12-DCV-Study.md
+++ b/docs/_stdyPosts/2017-01-12-DCV-Study.md
@@ -9,5 +9,7 @@ tags:
 summary: 'Test of cohortex editor'
 researcher_id: tereza.abrahao@usp.br
 description: 'Tereza Abrahao'
+styles: [/css/cohortexCss/showJSON.css]
+scripts: [/cohortexJs/cohortexStudyPost.js]
 ---
 
